--- a/app/src/main/res/layout/tasks_act.xml
+++ b/app/src/main/res/layout/tasks_act.xml
@@ -22,7 +22,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".tasks.TasksActivity"
-    tools:openDrawer="start">
+    tools:openDrawer="">
 
     <LinearLayout
         android:layout_width="match_parent"
